--- a/.github/workflows/u22-musl.yml
+++ b/.github/workflows/u22-musl.yml
@@ -3,7 +3,7 @@ name: ubuntu 22.04 CMake aarch64-gcc-musl
 on:
   workflow_dispatch:
   push:
-    branches: [ develop ]
+    branches: [ main ]
 jobs:
   build:
     runs-on: ubuntu-22.04
