--- a/.github/workflows/u22-musl.yml
+++ b/.github/workflows/u22-musl.yml
@@ -8,12 +8,13 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
-    - name: Install Intel Compilers
+    - name: Install Musl Compiler
       run: |
         sudo apt-get update
         sudo apt-get install -y gcc-aarch64-linux-gnu
         sudo apt-get install -y musl
         sudo apt-get install -y musl-dev
+        sudo apt-get install -y musl-tools
     - name: Get Sources
       uses: actions/checkout@v3
     - name: Build and Test
