--- a/.github/workflows/u22-musl.yml
+++ b/.github/workflows/u22-musl.yml
@@ -12,9 +12,9 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y gcc-aarch64-linux-gnu
-        sudo apt-get install -y musl
-        sudo apt-get install -y musl-dev
-        sudo apt-get install -y musl-tools
+        sudo apt-get install -y musl:arm64
+        sudo apt-get install -y musl-dev:arm64
+        sudo apt-get install -y musl-tools:arm64
     - name: Get Sources
       uses: actions/checkout@v3
     - name: Build and Test
