--- a/.github/workflows/u22-musl.yml
+++ b/.github/workflows/u22-musl.yml
@@ -10,17 +10,15 @@ jobs:
     steps:
     - name: Install Musl Compiler
       run: |
+        sudo dpkg --add-architecture arm64
         sudo apt-get update
         sudo apt-get install -y gcc-aarch64-linux-gnu
-        sudo apt-get install -y musl
-        sudo apt-get install -y musl-dev
-        sudo apt-get install -y musl-tools
+        sudo apt-get install -y musl:arm64
+        sudo apt-get install -y musl-dev:arm64
+        sudo apt-get install -y musl-tools:arm64
     - name: Get Sources
       uses: actions/checkout@v3
     - name: Build and Test
       run: |
-        wget https://musl.cc/aarch64-linux-musl-cross.tgz
-        tar -xvzf aarch64-linux-musl-cross.tgz
-        ./aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc --version
         which aarch64-linux-musl-gcc
         aarch64-linux-musl-gcc -v
