--- a/.github/workflows/u22-musl.yml
+++ b/.github/workflows/u22-musl.yml
@@ -16,6 +16,8 @@ jobs:
       uses: actions/checkout@v3
     - name: Build and Test
       run: |
+        wget https://musl.cc/aarch64-linux-musl-cross.tgz
+        tar -xvzf aarch64-linux-musl-cross.tgz      
         ./aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc --version
         ls ./aarch64-linux-musl-cross/bin/
         
