--- a/.github/workflows/u22-musl.yml
+++ b/.github/workflows/u22-musl.yml
@@ -22,7 +22,8 @@ jobs:
         ls ./aarch64-linux-musl-cross/bin/
         git clone https://github.com/hyoklee/hdf5
         cd hdf5
-        ./autogen.sh
-        ./configure CC=../aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc
+        mkdir build
+        cd build
+        cmake -DCMAKE_C_COMPILER=../../aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc -DCMAKE_AR=../../aarch64-linux-musl-cross/bin/aarch64-linux-musl-ar ..        
         make
         
