--- a/.github/workflows/u22-musl.yml
+++ b/.github/workflows/u22-musl.yml
@@ -22,7 +22,8 @@ jobs:
         tar -xvzf aarch64-linux-musl-cross.tgz      
         ./aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc --version
         ls ./aarch64-linux-musl-cross/bin/
-        sudo cp -r ./aarch64-linux-musl-cross/lib/* /lib/
+        sudo cp -r ./aarch64-linux-musl-cross/aarch64-linux-musl/lib/* /lib/
+        ls /lib/
         git clone https://github.com/hyoklee/hdf5
         cd hdf5
         mkdir build
