--- a/.github/workflows/u22-musl.yml
+++ b/.github/workflows/u22-musl.yml
@@ -30,4 +30,5 @@ jobs:
         cd build
         cmake -DCMAKE_C_COMPILER=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc -DCMAKE_AR=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-ar -DCMAKE_SYSTEM_PROCESSOR=arm ..        
         make
+        make test
         
