--- a/.github/workflows/n4h5.yml
+++ b/.github/workflows/n4h5.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Install NetCDF and HDF5
       run: |
         sudo apt-get update
-        sudo apt-get install -y -q libhdf5-dev libhdf5-dev nco
+        sudo apt-get install -y -q libhdf5-dev libnetcdf-dev nco
     - name: Get Sources
       uses: actions/checkout@v3
     - name: Check versions
