--- a/.github/workflows/n4h5.yml
+++ b/.github/workflows/n4h5.yml
@@ -6,7 +6,7 @@ on:
     branches: [ main ]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - name: Install NetCDF and HDF5
       run: |
