--- a/.github/workflows/gfortran.yml
+++ b/.github/workflows/gfortran.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Run spack
       run: |
         . ./spack/share/spack/setup-env.sh
-        spack find compilers
+        spack compiler find
         spack compilers
         
         
