--- a/.github/workflows/u22-musl-h4.yml
+++ b/.github/workflows/u22-musl-h4.yml
@@ -13,6 +13,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y gcc-aarch64-linux-gnu
         sudo apt-get install binfmt-support qemu qemu-user-static
+        sudo apt-get install libjpeg-dev
     - name: Get Sources
       uses: actions/checkout@v3
     - name: Build and Test
