--- a/.github/workflows/u22-musl-h4.yml
+++ b/.github/workflows/u22-musl-h4.yml
@@ -28,7 +28,7 @@ jobs:
         cd hdf4
         mkdir build
         cd build
-        cmake -DCMAKE_C_COMPILER=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc -DCMAKE_AR=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-ar -DCMAKE_SYSTEM_PROCESSOR=arm -DHDF4_ENALBE_JPEG_LIB_SUPPORT:BOOL=OFF ..
+        cmake -DCMAKE_C_COMPILER=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc -DCMAKE_AR=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-ar -DCMAKE_SYSTEM_PROCESSOR=arm -DHDF4_ENALBE_JPEG_LIB_SUPPORT:BOOL=OFF -DHDF4_ALLOW_EXTERNAL_SUPPORT:STRING="GIT" ..
         make
         make test
         
