--- a/.github/workflows/aarch64_auto.yml
+++ b/.github/workflows/aarch64_auto.yml
@@ -29,7 +29,7 @@ jobs:
             git clone https://github.com/HDFGroup/hdf4
             cd hdf4
             export EXT2LIB+=" -ltirpc"
-            echo $CFLAGS
+            # echo $CFLAGS
             echo $LDFLAGS
             echo $EXT2LIB
             autoreconf -fvi
