ci: change compiler

--- a/.github/workflows/linux-icx.yml
+++ b/.github/workflows/linux-icx.yml
@@ -31,7 +31,7 @@ jobs:
           export SYCL_DEVICE_FILTER=opencl.cpu
           tar zxvf hdf5-1.14.0.tar.gz
           cd hdf5-1.14.0
-          ./configure --prefix=/usr/local
+          ./configure CC=icx CXX=dpcpp --prefix=/usr/local
           make
           make check
           sudo make install
