--- a/.github/workflows/linux-icx.yml
+++ b/.github/workflows/linux-icx.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install intel-oneapi-compiler-dpcpp-cpp
+          which icx 
       - name: install oneAPI MKL library
         shell: bash
         run: |
