--- a/.github/workflows/octave.yml
+++ b/.github/workflows/octave.yml
@@ -13,6 +13,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install octave
+          sudo apt-get install liboctave-dev
           sudo apt-get install libnetcdf-dev
           octave test.m
           
