--- a/.github/workflows/octave.yml
+++ b/.github/workflows/octave.yml
@@ -3,7 +3,7 @@ name: Octave
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -12,12 +12,13 @@ jobs:
       - uses: actions/checkout@v3
         with:
           lfs: true
-      - name: Install Octave
+      - name: Test Octave
         run: |
           sudo apt-add-repository ppa:octave/stable
           sudo apt-get update
           sudo apt-get install octave
           sudo apt-get install liboctave-dev
           sudo apt-get install libnetcdf-dev
+          wget https://gamma.hdfgroup.org/ftp/pub/outgoing/NASAHDF/CER_SSF_NOAA20-FM6-VIIRS_Edition1B_100102.2022080123.nc
           octave test.m
           
