--- a/.github/workflows/netcdf.yml
+++ b/.github/workflows/netcdf.yml
@@ -14,3 +14,15 @@ jobs:
       run: |
         sudo apt update
         sudo apt install -y libaec-dev zlib1g-dev automake autoconf libcurl4-openssl-dev libjpeg-dev wget curl bzip2 m4 flex bison cmake libzip-dev doxygen openssl
+    - name: Checkout HDF5
+      uses: actions/checkout@v3
+      with:
+        repository: HDFGroup/hdf5
+        path: hdf5
+    - name: Install HDF5
+      run: |
+        cd hdf5
+        ./autogen.sh
+        ./configure --prefix=/usr/local --disable-static --enable-shared --enable-hl --with-szlib
+        make -j
+        sudo make install -j
