--- a/.github/workflows/h5py.yml
+++ b/.github/workflows/h5py.yml
@@ -2,12 +2,12 @@ name: h5py
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main- ]
     paths-ignore:
     - 'doc/**'
     - 'release_docs/**'
   pull_request:
-    branches: [ main ]
+    branches: [ main- ]
   workflow_dispatch:
 
 jobs:
