--- a/.github/workflows/spack.yml
+++ b/.github/workflows/spack.yml
@@ -1,58 +1,25 @@
-name: spack hdf5
+name: spack pmdk
 
 on:
   push:
-    branches: [ main- ]
+    branches: [ main ]
   pull_request:
-    branches: [ main- ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - name: Checkout spack
       uses: actions/checkout@v3
       with:
-        repository: spack/spack
+        repository: hyoklee/spack
         path: ./spack      
-    - name: Install APT Dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -q -y autoconf
-        sudo apt-get install -q -y automake
-        sudo apt-get install -q -y cmake
-        sudo apt-get install -q -y libtool
-        sudo apt-get install -q -y libtool-bin
-        sudo apt-get install -q -y mpich
-        sudo apt-get install -q -y zlib1g-dev
-        sudo apt-get install -q -y diffutils
-        sudo apt-get install -q -y libdb-dev         
-        sudo apt-get install -q -y libedit-dev
-        sudo apt-get install -q -y libncurses6
-        sudo apt-get install -q -y libxml2-dev
-        sudo apt-get install -q -y openssl        
-    - name: Run spack install hermes
+    - name: Run spack install pmdk
       run: |
         . ./spack/share/spack/setup-env.sh
         spack compiler find
         spack compilers
-        spack external find autoconf
-        spack external find automake
-        spack external find berkeley-db
-        spack external find boost
-        spack external find cmake
-        spack external find diffutils
-        spack external find libedit
-        spack external find libtool
-        spack external find libiconv
-        spack external find libxml2
-        spack external find m4
-        spack external find ncurses
-        spack external find openssl
-        spack external find perl
-        spack external find pkgconf
-        spack external find zlib
-        spack external find xz        
-        spack install hermes
+        spack install pmdk
         
