--- a/.github/workflows/spack.yml
+++ b/.github/workflows/spack.yml
@@ -21,5 +21,5 @@ jobs:
         . ./spack/share/spack/setup-env.sh
         spack compiler find
         spack compilers
-        spack install pmdk
+        spack install protobuf-c
         
