--- a/.github/workflows/linux-icx-auto.yml
+++ b/.github/workflows/linux-icx-auto.yml
@@ -23,7 +23,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout HDF5
+        uses: actions/checkout@v3
+        with:
+          repository: HDFGroup/hdf5
+          path: ./hdf5
       - name: Install Dependencies
         run:  |
           sudo apt-get update
@@ -53,6 +57,7 @@ jobs:
       - name: Test serial
         shell: bash
         run: |
+          cd ./hdf5
           source /opt/intel/oneapi/setvars.sh
           ./autogen.sh
           ./configure --enable-fortran CXX=`which dpcpp` CC=`which icx` FC=`which ifx`
