--- a/.github/workflows/spack.yml
+++ b/.github/workflows/spack.yml
@@ -2,9 +2,9 @@ name: spack dpdk%oneapi
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main- ]
   pull_request:
-    branches: [ main ]
+    branches: [ main- ]
   workflow_dispatch:
 
 jobs:
