--- a/.github/workflows/linux-icx-auto.yml
+++ b/.github/workflows/linux-icx-auto.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
   pull_request:
-    branches: [ main ]
+    branches: [ main- ]
     paths-ignore:
       - '.github/CODEOWNERS'
       - '.github/FUNDING.yml'
