--- a/.github/workflows/linux-icx-auto.yml
+++ b/.github/workflows/linux-icx-auto.yml
@@ -64,7 +64,7 @@ jobs:
           echo $PATH
           which ifx
           ./autogen.sh
-          ./configure --enable-fortran --enable-parallel CXX="$(which mpiicpc) -cc=$(which icpx)" CC="$(which mpiicc) -cc=$(which icx)" FC="$(which mpiifort) -fc=$(which ifx)" LDFLAGS="-L/opt/intel/oneapi/mpi/2021.5.1/lib/intel64/"
+          ./configure --enable-fortran --enable-parallel CXX="$(which mpiicpc) -cc=$(which icpx)" CC="$(which mpiicc) -cc=$(which icx)" FC="$(which mpiifort) -fc=$(which ifx)" LDFLAGS="-L/opt/intel/oneapi/mpi/2021.9.0/lib"
           make -j
           make check -j 
           sudo make install
