--- a/.github/workflows/netcdf.yml
+++ b/.github/workflows/netcdf.yml
@@ -3,9 +3,9 @@ name: netCDF
 on:
   workflow_dispatch:
   push:
-    branches: [ main- ]  
+    branches: [ main ]  
   pull_request:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -41,5 +41,5 @@ jobs:
         cat libnetcdf.settings
         CFLAGS=${CFLAGS} LDFLAGS=${LDFLAGS} LD_LIBRARY_PATH=${LD_LIBRARY_PATH} make -j
         CFLAGS=${CFLAGS} LDFLAGS=${LDFLAGS} LD_LIBRARY_PATH=${LD_LIBRARY_PATH} make check TESTS="" -j
-        LD_LIBRARY_PATH="/home/runner/work/actions/actoins/netcdf-c/liblib/.libs:${LD_LIBRARY_PATH}"
+        LD_LIBRARY_PATH="/home/runner/work/actions/actions/netcdf-c/lib/.libs:${LD_LIBRARY_PATH}"
         CFLAGS=${CFLAGS} LDFLAGS=${LDFLAGS} LD_LIBRARY_PATH=${LD_LIBRARY_PATH} make check -j
