--- a/.github/workflows/h5py.yml
+++ b/.github/workflows/h5py.yml
@@ -2,7 +2,7 @@ name: h5py
 
 on:
   push:
-    branches: [ main- ]
+    branches: [ main ]
     paths-ignore:
     - 'doc/**'
     - 'release_docs/**'
@@ -21,11 +21,12 @@ jobs:
     - name: Checkout Spack
       uses: actions/checkout@v3
       with:
-        repository: hyoklee/spack
+        repository: spack/spack
         path: ./spack
 
     - name: Run a multi-line script
       run: |
+        sed -i 's/hdf5@1.8.4:1.14/hdf5@1.8.4:/g' ./spack/var/spack/repos/builtin/packages/py-h5py/package.py      
         . ./spack/share/spack/setup-env.sh      
         ./spack/bin/spack spec py-h5py@master+mpi ^hdf5@develop-1.15
         ./spack/bin/spack install py-h5py@master+mpi ^hdf5@develop-1.15
