--- a/.github/workflows/linux-icx-auto.yml
+++ b/.github/workflows/linux-icx-auto.yml
@@ -3,6 +3,7 @@ name: linux autotools icx
 on:
   workflow_dispatch:
   push:
+    branches: [ main- ]  
   pull_request:
     branches: [ main- ]
     paths-ignore:
