--- a/.github/workflows/mac-ros3.yml
+++ b/.github/workflows/mac-ros3.yml
@@ -17,13 +17,13 @@ jobs:
           which openssl
           echo $SHELL
           echo $PKG_CONFIG_PATH
-          export PKG_CONFIG_PATH=/usr/local/Cellar/openssl@3/3.1.0/lib/pkgconfig:$PKG_CONFIG_PATH
+          export PKG_CONFIG_PATH=/usr/local/Cellar/openssl@3/3.1.0/lib/pkgconfig
           echo $PKG_CONFIG_PATH
-          # find / -name '*.pc'          
+          # find / -name '*.pc'
           git clone https://github.com/HDFGroup/hdf5.git
           cd hdf5
           mkdir build
-          cd build          
+          cd build
           cmake -G "Ninja" \
           -DBUILD_SHARED_LIBS:BOOL=ON \
           -DBUILD_STATIC_EXECS:BOOL=OFF \
@@ -80,7 +80,6 @@ jobs:
           -DSZIP_USE_EXTERNAL:BOOL=OFF \
           -DTEST_SHELL_SCRIPTS:BOOL=OFF \
           -DUSE_LIBAEC_STATIC:BOOL=OFF \
-          -DZLIB_USE_EXTERNAL:BOOL=OFF \          
+          -DZLIB_USE_EXTERNAL:BOOL=OFF \
           ..
           cmake --build . --config Release -j
-          
