--- a/.github/workflows/mac-ros3.yml
+++ b/.github/workflows/mac-ros3.yml
@@ -13,10 +13,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: Test ROS3
         run: |
-          which cmake
-          which openssl
-          echo $SHELL
-          echo $PKG_CONFIG_PATH
           export PKG_CONFIG_PATH=/usr/local/Cellar/openssl@3/3.1.0/lib/pkgconfig
           echo $PKG_CONFIG_PATH
           # find / -name '*.pc'
@@ -24,8 +20,7 @@ jobs:
           cd hdf5
           mkdir build
           cd build
-          brew install ninja
-          cmake -G "Ninja" \
+          cmake \
           -DBUILD_SHARED_LIBS:BOOL=ON \
           -DBUILD_STATIC_EXECS:BOOL=OFF \
           -DBUILD_STATIC_LIBS:BOOL=OFF \
@@ -68,7 +63,7 @@ jobs:
           -DHDF5_ENABLE_USING_MEMCHECKER:BOOL=OFF \
           -DHDF5_ENABLE_WARNINGS_AS_ERRORS:BOOL=OFF \
           -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF \
-          -DHDF5_GENERATE_HEADERS:BOOL=OFF \
+          -DHDF5_GENERATE_HEADERS:BOOL=ON \
           -DHDF5_IGNORE_DISABLED_FILE_LOCK:BOOL=OFF \
           -DHDF5_MINGW_STATIC_GCC_LIBS:BOOL=OFF \
           -DHDF5_MSVC_NAMING_CONVENTION:BOOL=OFF \
