ci: enable deprecated symbols

--- a/.github/workflows/mac-ros3.yml
+++ b/.github/workflows/mac-ros3.yml
@@ -47,7 +47,7 @@ jobs:
           -DHDF5_ENABLE_ALL_WARNINGS:BOOL=OFF \
           -DHDF5_ENABLE_COVERAGE:BOOL=OFF \
           -DHDF5_ENABLE_DEBUG_APIS:BOOL=OFF \
-          -DHDF5_ENABLE_DEPRECATED_SYMBOLS=OFF \
+          -DHDF5_ENABLE_DEPRECATED_SYMBOLS=ON \
           -DHDF5_ENABLE_DEV_WARNINGS=OFF \
           -DHDF5_ENABLE_DIRECT_VFD=OFF \
           -DHDF5_ENABLE_EMBEDDED_LIBINFO=OFF \
@@ -56,7 +56,7 @@ jobs:
           -DHDF5_ENABLE_MIRROR_VFD=OFF \
           -DHDF5_ENABLE_PARALLEL:BOOL=OFF \
           -DHDF5_ENABLE_PLUGIN_SUPPORT:BOOL=OFF \
-          -DHDF5_ENABLE_ROS3_VFD:BOOL=OFF \
+          -DHDF5_ENABLE_ROS3_VFD:BOOL=ON \
           -DHDF5_ENABLE_SUBFILING_VFD:BOOL=OFF \
           -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
           -DHDF5_ENABLE_THREADSAFE:BOOL=OFF \
