--- a/.github/workflows/mac-ros3.yml
+++ b/.github/workflows/mac-ros3.yml
@@ -15,6 +15,8 @@ jobs:
         run: |
           export PKG_CONFIG_PATH=/usr/local/Cellar/openssl@3/3.1.0/lib/pkgconfig
           echo $PKG_CONFIG_PATH
+          export OPENSSL_ROOT_DIR=/usr/local/Cellar/openssl@3/3.1.0
+          echo $OPENSSL_ROOT_DIR
           # find / -name '*.pc'
           git clone https://github.com/HDFGroup/hdf5.git
           cd hdf5
