--- a/.github/workflows/mac-ros3.yml
+++ b/.github/workflows/mac-ros3.yml
@@ -11,6 +11,27 @@ jobs:
     runs-on: macos-13
     steps:
       - uses: actions/checkout@v3
+            - name: Start LocalStack
+        run: |
+          pip install localstack awscli-local[ver1]
+          docker pull localstack/localstack
+          localstack start -d
+          echo "Waiting for LocalStack startup..."
+          localstack wait -t 30
+          echo "Startup complete"
+      - name: Run some Tests against LocalStack
+        run: |
+          awslocal s3 mb s3://test
+          awslocal s3 ls
+          echo "Test Execution complete!"
+      - name: Run some STS against LocalStack
+        run: |
+          awslocal sts get-caller-identity
+          awslocal sts get-session-token \
+              --duration-seconds 3600 \
+              --serial-number "YourMFADeviceSerialNumber" \
+              --token-code 123456
+          echo "Test Execution complete!"
       - name: Test ROS3
         run: |
           export PKG_CONFIG_PATH=/usr/local/Cellar/openssl@3/3.1.0/lib/pkgconfig
@@ -27,7 +48,7 @@ jobs:
           -DBUILD_STATIC_EXECS:BOOL=OFF \
           -DBUILD_STATIC_LIBS:BOOL=OFF \
           -DBUILD_SZIP_WITH_FETCHCONTENT:BOOL=OFF \
-          -DBUILD_TESTING:BOOL=OFF \
+          -DBUILD_TESTING:BOOL=ON \
           -DBUILD_USER_DEFINED_LIBS:BOOL=OFF \
           -DBUILD_ZLIB_WITH_FETCHCONTENT:BOOL=OFF \
           -DHDF5_BATCH_H5DETECT:BOOL=OFF \
