--- a/.github/workflows/mac-ros3.yml
+++ b/.github/workflows/mac-ros3.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Start LocalStack
         run: |
+          brew install docker
           pip install localstack awscli-local[ver1]
           docker pull localstack/localstack
           localstack start -d
