--- a/.github/workflows/mac-ros3.yml
+++ b/.github/workflows/mac-ros3.yml
@@ -11,9 +11,12 @@ jobs:
     runs-on: macos-13
     steps:
       - uses: actions/checkout@v3
-      - name: Start LocalStack
+      - name: Start Docker Daemon
         run: |
           brew install docker
+          dockerd -H /var/run/docker.sock
+      - name: Start LocalStack
+        run: |
           pip install localstack awscli-local[ver1]
           docker pull localstack/localstack
           localstack start -d
