--- a/.github/workflows/mac-minio.yml
+++ b/.github/workflows/mac-minio.yml
@@ -11,13 +11,13 @@ jobs:
     runs-on: macos-13
     steps:
       - uses: actions/checkout@v3
-      - name: Start Docker Daemon
+      - name: Install MinIO
         run: |
           brew install minio minio-mc
       - name: Start MinIO
         run: |
-          cat $HOME/.mc/config.json
-          minio server /tmp
+          ls -lrv /usr/local/etc/minio
+          /usr/local/opt/minio/bin/minio server --config-dir=/usr/local/etc/minio --address=:9000 /usr/local/var/minio
       - name: Create S3 bucket
         run: |
           aws --endpoint-url http://localhost:9000 s3 mb s3://test
