--- a/.github/workflows/win-clang.yml
+++ b/.github/workflows/win-clang.yml
@@ -11,13 +11,13 @@ jobs:
 
     steps:
       - name: Install Clang
-        uses: actions/setup-clang@v1
-
-      - name: Install CMake
-        uses: actions/setup-cmake@v2
+        uses: egor-tensin/setup-clang@v3
+        with:
+          platform: x64        
 
       - name: Build project
         run: |
           git clone https://github.com/HDFGroup/hdf5.git
           cd hdf5
-          cmake . -Bbuild && cmake --build build
+          cmake -B build -G "Visual Studio 17 2022" -A x64 -T ClangCL
+
