--- a/.github/workflows/win-clang.yml
+++ b/.github/workflows/win-clang.yml
@@ -21,6 +21,7 @@ jobs:
           cd hdf5
           cmake -B build -G "Visual Studio 17 2022" -A x64 -T ClangCL
           cmake --build build
-          ctest -C build
+          cd build && make test
+          
           
 
