--- a/.github/workflows/win-clang.yml
+++ b/.github/workflows/win-clang.yml
@@ -19,9 +19,9 @@ jobs:
         run: |
           git clone https://github.com/HDFGroup/hdf5.git
           cd hdf5
-          cmake -B build -G "Visual Studio 17 2022" -A x64 -T ClangCL
-          cmake --build build
-          cd build && make test
+          cmake -B build -G "Visual Studio 17 2022" -A x64 -T ClangCL -C Debug
+          cmake --build build -C Debug
+          cd build && ctest -C Debug -VV 
           
           
 
