--- a/.github/workflows/win-clang.yml
+++ b/.github/workflows/win-clang.yml
@@ -13,7 +13,11 @@ jobs:
       - name: Install Clang
         uses: egor-tensin/setup-clang@v1.4
         with:
-          platform: x64        
+          platform: x64
+
+      - name: Install curl
+        run: |
+          choco install curl
 
       - name: Build project
         run: |
@@ -22,6 +26,3 @@ jobs:
           cmake -DHDF5_ENABLE_ROS3_VFD:BOOL=ON -B build -G "Visual Studio 17 2022" -A x64 -T ClangCL 
           cmake --build build --config Debug
           cd build && ctest -C Debug -VV 
-          
-          
-
