--- a/.github/workflows/win-clang.yml
+++ b/.github/workflows/win-clang.yml
@@ -23,6 +23,6 @@ jobs:
         run: |
           git clone https://github.com/HDFGroup/hdf5.git
           cd hdf5
-          cmake -DCURL_INCLUDE_DIR=C:\programdata\chocolatey\lib\curl\tools\curl-8.1.2_1-win64-mingw\include  -DCURL_LIBRARY=C:\programdata\chocolatey\lib\curl\tools\curl-8.1.2_1-win64-mingw\lib -DHDF5_ENABLE_ROS3_VFD:BOOL=ON -B build -G "Visual Studio 17 2022" -A x64 -T ClangCL 
+          cmake -DCURL_INCLUDE_DIR=C:\programdata\chocolatey\lib\curl\tools\curl-8.1.2_1-win64-mingw\include  -DCURL_LIBRARY=C:\programdata\chocolatey\lib\curl\tools\curl-8.1.2_1-win64-mingw\lib\libcurl.a -DHDF5_ENABLE_ROS3_VFD:BOOL=ON -B build -G "Visual Studio 17 2022" -A x64 -T ClangCL 
           cmake --build build --config Debug
           cd build && ctest -C Debug -VV 
