ci: shuffle order

--- a/.github/workflows/win-clang-vpkg.yml
+++ b/.github/workflows/win-clang-vpkg.yml
@@ -19,16 +19,18 @@ jobs:
         run: |
           git clone https://github.com/microsoft/vcpkg.git
           .\vcpkg\bootstrap-vcpkg.bat
+          .\vcpkg\vcpkg install openssl:x64-windows-static-md          
           .\vcpkg\vcpkg install curl:x64-windows-static-md
-          .\vcpkg\vcpkg install openssl:x64-windows-static-md
           pwd
 
       - name: Build project
         run: |
           set CURL_ROOT D:\a\actions\actions\vcpkg\packages\curl_x64-windows-static-md
           set OPENSSL_ROOT D:\a\actions\actions\vcpkg\packages\openssl_x64-windows-static-md
+          set OPENSSL_INSTALL_DIR D:\a\actions\actions\vcpkg\packages\openssl_x64-windows-static-md          
+          set OPENSSL_LIBRARY D:\a\actions\actions\vcpkg\packages\openssl_x64-windows-static-md\libcrypto.lib          
           git clone https://github.com/hyoklee/hdf5.git
           cd hdf5
-          cmake -DBUILD_SHARED_LIBS:BOOL=OFF -DCURL_INCLUDE_DIR=D:\a\actions\actions\vcpkg\packages\curl_x64-windows-static-md\include  -DCURL_LIBRARY=D:\a\actions\actions\vcpkg\packages\curl_x64-windows-static-md\lib\libcurl.lib -DHDF5_ENABLE_ROS3_VFD:BOOL=ON -B build -G "Visual Studio 17 2022" -A x64 -T ClangCL 
+          cmake -DBUILD_SHARED_LIBS:BOOL=OFF -DCURL_INCLUDE_DIR=D:\a\actions\actions\vcpkg\packages\curl_x64-windows-static-md\include  -DCURL_LIBRARY=D:\a\actions\actions\vcpkg\packages\curl_x64-windows-static-md\lib\libcurl.lib -DOPENSSL_LIBRARY=D:\a\actions\actions\vcpkg\packages\openssl_x64-windows-static-md\libcrypto.lib -DHDF5_ENABLE_ROS3_VFD:BOOL=ON -B build -G "Visual Studio 17 2022" -A x64 -T ClangCL 
           cmake --build build --config Release
           cd build && ctest -C Release -VV 
