--- a/.github/workflows/win-clang-vpkg.yml
+++ b/.github/workflows/win-clang-vpkg.yml
@@ -31,6 +31,6 @@ jobs:
           set OPENSSL_LIBRARY D:\a\actions\actions\vcpkg\packages\openssl_x64-windows-static-md\libcrypto.lib          
           git clone https://github.com/hyoklee/hdf5.git
           cd hdf5
-          cmake -DBUILD_SHARED_LIBS:BOOL=OFF -DCURL_INCLUDE_DIR=D:\a\actions\actions\vcpkg\packages\curl_x64-windows-static-md\include  -DCURL_LIBRARY=D:\a\actions\actions\vcpkg\packages\curl_x64-windows-static-md\lib\libcurl.lib -DOPENSSL_LIBRARY=D:\a\actions\actions\vcpkg\packages\openssl_x64-windows-static-md\libcrypto.lib -DHDF5_ENABLE_ROS3_VFD:BOOL=ON -B build -G "Visual Studio 17 2022" -A x64 -T ClangCL 
+          cmake -DCMAKE_TOOLCHAIN_FILE=D:\a\actions\actions\vcpkg\scripts\buildsystems\vcpkg.cmake -DBUILD_SHARED_LIBS:BOOL=OFF -DCURL_INCLUDE_DIR=D:\a\actions\actions\vcpkg\packages\curl_x64-windows-static-md\include  -DCURL_LIBRARY=D:\a\actions\actions\vcpkg\packages\curl_x64-windows-static-md\lib\libcurl.lib -DOPENSSL_LIBRARY=D:\a\actions\actions\vcpkg\packages\openssl_x64-windows-static-md\libcrypto.lib -DHDF5_ENABLE_ROS3_VFD:BOOL=ON -B build -G "Visual Studio 17 2022" -A x64 -T ClangCL 
           cmake --build build --config Release
           cd build && ctest -C Release -VV 
