--- a/.github/workflows/linux-icx-auto-h4.yml
+++ b/.github/workflows/linux-icx-auto-h4.yml
@@ -3,9 +3,9 @@ name: linux autotools icx h4
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]  
+    branches: [ main- ]  
   pull_request:
-    branches: [ main ]
+    branches: [ main- ]
     paths-ignore:
       - 'doc/**'
       - 'release_docs/**'
