--- a/.github/workflows/h5py_no_pip.yml
+++ b/.github/workflows/h5py_no_pip.yml
@@ -1,11 +1,8 @@
 name: h5py
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "6 0 * * *"
-
-permissions:
-  contents: read
+  push:
+    branches: [ main ]  
 
 jobs:
   build:
