ci: install pywin32

--- a/.github/workflows/h5py_no_pip.yml
+++ b/.github/workflows/h5py_no_pip.yml
@@ -1,8 +1,8 @@
-name: h5py
+name: h5py no_pip
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]  
+    branches: [ main- ]  
 
 jobs:
   build:
