--- a/.github/workflows/spack-win.yml
+++ b/.github/workflows/spack-win.yml
@@ -11,6 +11,8 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
+    - name: Install pyWin32
+      run: pip install pywin32    
     - name: Checkout spack
       uses: actions/checkout@v3
       with:
