--- a/.github/workflows/spack-win.yml
+++ b/.github/workflows/spack-win.yml
@@ -2,9 +2,9 @@ name: spack install intel-oneapi-compilers
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main- ]
   pull_request:
-    branches: [ main ]
+    branches: [ main- ]
   workflow_dispatch:
 
 jobs:
