--- a/.github/workflows/win-fortran.yml
+++ b/.github/workflows/win-fortran.yml
@@ -11,7 +11,10 @@ jobs:
     steps:
       - name: Install Intel OneAPI
         uses: modflowpy/install-intelfortran-action@v1
-
+      - name: Install MPI
+        uses: mpi4py/setup-mpi@v1
+        with:
+          mpi: intelmpi
       - name: Build application
         run: |
           "%INTEL_HPCKIT_INSTALL_PATH%\compiler\%INTEL_COMPILER_VERSION%\env\vars.bat"
