--- a/.github/workflows/win-fortran.yml
+++ b/.github/workflows/win-fortran.yml
@@ -20,7 +20,11 @@ jobs:
           CC: icx
           FC: ifx
         run: |
-          # "%INTEL_HPCKIT_INSTALL_PATH%\compiler\%INTEL_COMPILER_VERSION%\env\vars.bat"
+          "%INTEL_HPCKIT_INSTALL_PATH%\compiler\%INTEL_COMPILER_VERSION%\env\vars.bat"
+          set CC icx
+          set FC ifx
+          set CPP icpx
+          dir "%INTEL_HPCKIT_INSTALL_PATH%\compiler\"
           git clone https://github.com/hyoklee/hdf5.git
           cd hdf5
           # cmake -B build  -DCMAKE_C_COMPILER="C:\Program Files (x86)\Intel\oneAPI\compiler\2022.2.0\windows\bin\icx.exe" -DCMAKE_CXX_COMPILER="C:\Program Files (x86)\Intel\oneAPI\compiler\2022.2.0\windows\bin\icx.exe" -DCMAKE_Fortran_COMPILER="C:\Program Files (x86)\Intel\oneAPI\compiler\2022.2.0\windows\bin\ifx.exe" -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_BUILD_FORTRAN:BOOL=ON
